--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0 viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="description" content="Techium is a digital agency" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
@@ -25,9 +25,9 @@
       <section>About section</section>
       <section>
         Latest news section
-        <article>Article 3</article>
         <article>Article 1</article>
         <article>Article 2</article>
+        <article>Article 3</article>
       </section>
 
       <section>
