--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -21,8 +21,7 @@
         <article>Work 2</article>
         <article>Work 3</article>
       </section>
-      <h2>Services</h2>
-      <section>Services section</section>
+      <section><h2>Services</h2></section>
       <section><h2>Works</h2></section>
       <section><h2>About Us</h2></section>
       <section>
