--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -44,6 +44,7 @@
             <li>Felis enim feugiat dolore viverra.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
           </ul>
+          <h3>Ordered</h3>
           <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
             <li>Felis enim feugiat dolore viverra.</li>
