--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -41,14 +41,14 @@
           <h3>Unordered</h3>
           <ul>
             <li>Dolor pulvinar etiam magna etiam.</li>
-            <li>Felis enim feugiat dolore viverra.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
+            <li>Felis enim feugiat dolore viverra.</li>
           </ul>
           <h3>Ordered</h3>
           <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
-            <li>Felis enim feugiat dolore viverra.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
+            <li>Felis enim feugiat dolore viverra.</li>
           </ol>
           <h3>Definition</h3>
           <dl>
