--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -185,13 +185,13 @@
                 I am completely blown away. Thanks to Techium, we've just
                 launched our 5th website!
               </blockquote>
-              <cite>Yuri Y</cite>
+              <cite>Yuri Y.</cite>
             </article>
             <article>
               <blockquote>
                 Thank you so much for your help. Techium company is awesome!
               </blockquote>
-              <cite>Dorrie S</cite>
+              <cite>Dorrie S.</cite>
             </article>
             <article>
               <blockquote>
