--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -83,12 +83,12 @@
         </div>
         <div>
           <h3>Blockquote</h3>
-          <blockquote cite="Kanye West, Musician">
+          <blockquote>
             I will be the leader of a company that ends up being worth billions
             of dollars, because I got the answers. I understand culture. I am
             the nucleus. I think that’s a responsibility that I have, to push
             possibilities, to show people, this is the level that things could
-            be at.
+            be at. <cite>Kanye West, Musician</cite>
           </blockquote>
         </div>
       </section>
