--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -88,7 +88,7 @@
             of dollars, because I got the answers. I understand culture. I am
             the nucleus. I think that’s a responsibility that I have, to push
             possibilities, to show people, this is the level that things could
-            be at. <cite>Kanye West, Musician</cite>
+            be at. Kanye West, Musician
           </blockquote>
         </div>
       </section>
