--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -88,8 +88,9 @@
             of dollars, because I got the answers. I understand culture. I am
             the nucleus. I think that’s a responsibility that I have, to push
             possibilities, to show people, this is the level that things could
-            be at. Kanye West, Musician
+            be at.
           </blockquote>
+          <footer><cite>Kanye West, Musician</cite></footer>
         </div>
       </section>
     </main>
