--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -121,28 +121,34 @@
       <!-- Table -->
       <section>
         <header><h2>Table</h2></header>
-        <h3>Star Wars Trilogy Data</h3>
         <table>
-          <tr>
-            <th>Title</th>
-            <th>Director</th>
-            <th>Release Date</th>
-          </tr>
-          <tr>
-            <td><h3>Star Wars: Episode IV - A New Hope</h3></td>
-            <td>George Lucas</td>
-            <td>May 25th, 1977</td>
-          </tr>
-          <tr>
-            <td><h3>Star Wars: Episode V - The Empire Strikes Back</h3></td>
-            <td>Irvin Kershner</td>
-            <td>May 21st, 1980</td>
-          </tr>
-          <tr>
-            <td><h3>Star Wars: Episode VI - Return of the Jedi</h3></td>
-            <td>Richard Marquand</td>
-            <td>May 25th, 1983</td>
-          </tr>
+          <thead>
+            <th>Star Wars Trilogy Data</th>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="col">Title</th>
+              <th scope="col">Director</th>
+              <th scope="col">Release Date</th>
+            </tr>
+            <tr>
+              <th scope="row">Star Wars: Episode IV - A New Hope</th>
+              <td>George Lucas</td>
+              <td>May 25th, 1977</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                Star Wars: Episode V - The Empire Strikes Back
+              </th>
+              <td>Irvin Kershner</td>
+              <td>May 21st, 1980</td>
+            </tr>
+            <tr>
+              <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+              <td>Richard Marquand</td>
+              <td>May 25th, 1983</td>
+            </tr>
+          </tbody>
         </table>
       </section>
     </main>
