Replace text logo with image logo

--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -19,7 +19,7 @@
         <div>
           <a href="/"
             ><img
-              src="./logo-black.png"
+              src="logo-black.png"
               alt="Techium logo"
               style="height: 40px; width: 160px"
           /></a>
@@ -237,7 +237,7 @@
     <footer>
       <a href="/"
         ><img
-          src="./logo-black.png"
+          src="logo-black.png"
           alt="Techium logo"
           style="height: 40px; width: 160px"
       /></a>
