--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -18,11 +18,12 @@
       <div>
         <div>
           <a href="/"
-            ><img
-              src="logo-black.png"
-              alt="Techium logo"
-              style="height: 40px; width: 160px"
-          /></a>
+            ><span
+              ><img
+                src="logo-black.png"
+                alt="Techium logo"
+                style="height: 40px; width: 160px" /></span
+          ></a>
         </div>
         <nav>
           <ul>
@@ -237,7 +238,7 @@
     <footer>
       <a href="/"
         ><img
-          src="logo-black.png"
+          src="./logo-black.png"
           alt="Techium logo"
           style="height: 40px; width: 160px"
       /></a>
