--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -17,13 +17,14 @@
     <header>
       <div>
         <div>
-          <a href="/"
-            ><span
-              ><img
-                src="logo-black.png"
-                alt="Techium logo"
-                style="height: 40px; width: 160px" /></span
-          ></a>
+          <a href="/">
+            <img
+              src="logo-black.png"
+              alt="Techium logo"
+              width="160"
+              height="40"
+            />
+          </a>
         </div>
         <nav>
           <ul>
@@ -236,12 +237,6 @@
     <br />
     <!-- Footer -->
     <footer>
-      <a href="/"
-        ><img
-          src="./logo-black.png"
-          alt="Techium logo"
-          style="height: 40px; width: 160px"
-      /></a>
       <address>
         234 Washington Street <br />
         Urbana, Illinois
