--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -17,14 +17,12 @@
     <header>
       <div>
         <div>
-          <a href="/">
-            <img
-              src="logo-black.png"
+          <a href="/"
+            ><img
+              src="./logo-black.png"
               alt="Techium logo"
-              width="160"
-              height="40"
-            />
-          </a>
+              style="height: 40px; width: 160px"
+          /></a>
         </div>
         <nav>
           <ul>
@@ -237,17 +235,6 @@
     <br />
     <!-- Footer -->
     <footer>
-      <div>
-        <a href="/">
-          <img
-            src="logo-black.png"
-            alt="Techium logo"
-            width="160"
-            height="40"
-          />
-        </a>
-      </div>
-
       <address>
         234 Washington Street <br />
         Urbana, Illinois
