--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -21,7 +21,8 @@
             ><img
               src="./logo-black.png"
               alt="Techium logo"
-              style="height: 40px; width: 160px"
+              height="40"
+              width="160"
           /></a>
         </div>
         <nav>
