--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -18,12 +18,13 @@
       <div>
         <div>
           <a href="/"
-            ><img
-              src="./logo-black.png"
-              alt="Techium logo"
-              height="40"
-              width="160"
-          /></a>
+            ><span
+              ><img
+                src="./logo-black.png"
+                alt="Techium logo"
+                height="40"
+                width="160" /></span
+          ></a>
         </div>
         <nav>
           <ul>
