--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -236,6 +236,15 @@
     <br />
     <!-- Footer -->
     <footer>
+      <div>
+        <a href="/"
+          ><img
+            src="./logo-black.png"
+            alt="Techium logo"
+            height="40"
+            width="160"
+        /></a>
+      </div>
       <address>
         234 Washington Street <br />
         Urbana, Illinois
