--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -239,7 +239,7 @@
       <div>
         <a href="/"
           ><img
-            src="./logo-black.png"
+            src="logo-black.png"
             alt="Techium logo"
             height="40"
             width="160"
