--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -311,8 +311,8 @@
               ><svg
                 viewbox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg"
-                width="25"
-                height="25"
+                width="25px"
+                height="25px"
               >
                 <title>Facebook icon</title>
                 <path
@@ -325,8 +325,8 @@
               ><svg
                 viewbox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg"
-                width="25"
-                height="25"
+                width="25px"
+                height="25px"
               >
                 <title>Twitter icon</title>
                 <path
@@ -339,8 +339,8 @@
               ><svg
                 viewbox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg"
-                width="25"
-                height="25"
+                width="25px"
+                height="25px"
               >
                 <title>Instagram icon</title>
                 <path
