--- a/0x00-html_advanced/39-styleguide.html
+++ b/0x00-html_advanced/39-styleguide.html
@@ -191,7 +191,7 @@
       <!-- Audio -->
       <section>
         <header><h2>Audio</h2></header>
-        <audio controls loop>
+        <audio controls>
           <source
             src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3"
             type="audio/mpeg"
